<resources>
    <string name="app_name">Orbot</string>
    <string name="app_description">Orbot is a free proxy app that empowers other apps to use the internet more securely. Orbot uses Tor to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Tor is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
    <string name="menu_settings">Orbot Settings</string>
    <string name="system_vpn_settings">Android VPN Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_about">About</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="button_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_beta_consent">Log Settings</string>
    <string name="beta_consent_active">Active (%1$s)</string>
    <string name="beta_consent_disabled">Disabled</string>
    <string name="beta_consent_enable">Enable Beta Logging</string>
    <string name="beta_consent_change">Change Settings</string>
    <string name="beta_consent_export">Export Logs</string>
    <string name="beta_consent_clear">Clear Logs</string>
    <string name="beta_consent_stats_title">Data Collection Statistics</string>
    <string name="beta_consent_mesh_events">Mesh Events</string>
    <string name="beta_consent_user_actions">User Actions</string>
    <string name="beta_consent_network_conditions">Network Readings</string>
    <string name="beta_consent_battery_impacts">Battery Metrics</string>
    <string name="beta_consent_installation_steps">Install Steps</string>
    <string name="beta_consent_protest_metrics">Protest Metrics</string>
    <string name="beta_consent_total_entries">Total Entries: %1$d</string>
    <string name="beta_consent_total_entries_placeholder">Total Entries: 0</string>
    <string name="beta_consent_privacy_title">Privacy &amp; Security</string>
    <string name="beta_consent_privacy_1">Data encrypted on device</string>
    <string name="beta_consent_privacy_2">Anonymous user ID rotates monthly</string>
    <string name="beta_consent_privacy_3">No personal data collected</string>
    <string name="beta_consent_privacy_4">Auto-delete after 30 days</string>
    <string name="beta_consent_privacy_protest">For Protest Environments: All data is stored locally and encrypted. Even if your device is confiscated, the beta logs cannot be decrypted without your device's secure keys.</string>
    <string name="beta_consent_dialog_title">Beta Testing Consent</string>
    <string name="beta_consent_dialog_description">Help improve Orbot-Meshrabiya by sharing anonymous usage data during beta testing. Choose your data sharing level below.</string>
    <string name="beta_consent_level_basic">Basic</string>
    <string name="beta_consent_level_detailed">Detailed</string>
    <string name="beta_consent_level_full">Full</string>
    <string name="beta_consent_not_now">Not Now</string>
    <string name="beta_consent_enable_logging">Enable Beta Logging</string>
    <string name="menu_scan">Scan BridgeQR</string>
    <string name="menu_share_bridge">Share BridgeQR</string>
    <string name="wizard_details_msg">Orbot is an open-source application that contains Tor, IPtProxy (Obfs4Proxy, Meek, Snowflake), Go-Tun2Socks and LibEvent. It provides a VPN tunnel, a local HTTP Connect proxy (HTTPS only on port 8118) and a SOCKS proxy (9050) into the Tor network.</string>
    <string name="pref_general_group">General</string>
    <string name="pref_start_boot_title">Start Orbot on Boot</string>
    <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
    <string name="pref_node_configuration">Node Configuration</string>
    <string name="pref_node_configuration_summary">These are advanced settings that can reduce your anonymity</string>
    <string name="pref_entrance_node">Entrance Nodes</string>
    <string name="pref_entrance_node_summary">Fingerprints, nicks, countries and addresses for the first hop</string>
    <string name="pref_entrance_node_dialog">Enter Entrance Nodes</string>
    <string name="pref_allow_background_starts_title">Allow Background Starts</string>
    <string name="pref_allow_background_starts_summary">Let any app tell Orbot to start Tor and related services</string>
    <string name="pref_proxy_title">Outbound Network Proxy (Optional)</string>
    <string name="pref_proxy_type_title">Outbound Proxy Type</string>
    <string name="pref_proxy_type_summary">Protocol to use for proxy server: HTTP, HTTPS, SOCKS4, SOCKS5</string>
    <string name="pref_proxy_type_dialog">Enter Proxy Type</string>
    <string name="pref_proxy_host_title">Outbound Proxy Host</string>
    <string name="pref_proxy_host_summary">Proxy Server hostname</string>
    <string name="pref_proxy_host_dialog">Enter Proxy Host</string>
    <string name="pref_proxy_port_title">Outbound Proxy Port</string>
    <string name="pref_proxy_port_summary">Proxy Server port</string>
    <string name="pref_proxy_port_dialog">Enter Proxy port</string>
    <string name="pref_proxy_username_title">Outbound Proxy Username</string>
    <string name="pref_proxy_username_summary">Proxy Username (Optional)</string>
    <string name="pref_proxy_username_dialog">Enter Proxy Username</string>
    <string name="pref_proxy_password_title">Outbound Proxy Password</string>
    <string name="pref_proxy_password_summary">Proxy Password (Optional)</string>
    <string name="pref_proxy_password_dialog">Enter Proxy Password</string>
    <string name="error">Error</string>
    <string name="exit_nodes">Exit Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Fingerprints, nicks, countries and addresses for the last hop</string>
    <string name="enter_exit_nodes">Enter Exit Nodes</string>
    <string name="exclude_nodes">Exclude Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Fingerprints, nicks, countries and addresses to exclude</string>
    <string name="enter_exclude_nodes">Enter Exclude Nodes</string>
    <string name="strict_nodes">Strict Nodes</string>
    <string name="strict_nodes_description">Treat Exclude Nodes settings as a requirement for building all circuits. This may break functionality if no circuits are able to be generated with your Exclude Nodes settings.</string>
    <string name="bridges">Bridges</string>
    <string name="use_bridges">Use Bridges</string>
    <string name="reachable_addresses">Reachable Addresses</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Run as a client behind a firewall with restrictive policies</string>
    <string name="reachable_ports">Reachable ports</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
    <string name="enter_ports">Enter ports</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Enable debug log to output (must use adb or aLogcat to view)</string>
    <string name="project_home">Project Home:</string>
    <string name="orbot_url" translatable="false">https://orbot.app/</string>
    <string name="orbot_github" translatable="false">https://github.com/guardianproject/orbot/</string>
    <string name="tor_url" translatable="false">Tor v%s: https://www.torproject.org</string>
    <string name="obfs4_url" translatable="false">Lyrebird v%s: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/lyrebird</string>
    <string name="snowflake_url" translatable="false">Snowflake v%s: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake</string>
    <string name="openssl_url" translatable="false">OpenSSL: http://www.openssl.org</string>
    <string name="third_party_software">3rd-Party-Software: </string>
    <string name="version">Version:</string>
    <string name="license">License:</string>
    <string name="hidden_service_request">An app wants to open onion server on port %1$s to the Tor network. This is safe if you trust the app.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="pref_use_expanded_notifications">Display in the notification the country and IP Address of your tor exit node when available</string>
    <string name="pref_use_expanded_notifications_title">Expanded Notifications</string>
    <string name="set_locale_title">Language</string>
    <string name="pref_disable_network_title">No Network Auto-Sleep</string>
    <string name="pref_disable_network_summary">Put Tor to sleep when there is no internet available</string>
    <string name="newnym">You\'ve switched to a new Tor identity!</string>
    <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
    <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Tor</string>
    <string name="pref_socks_title">Tor SOCKS</string>
    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on (default: 9050 or 0 to disable)</string>
    <string name="pref_socks_dialog">SOCKS Port Config</string>
    <string name="pref_http_title">Tor HTTP</string>
    <string name="pref_http_summary">Port that Tor offers its HTTP proxy on (default: 8118 or 0 to disable)</string>
    <string name="pref_http_dialog">HTTP Port Config</string>
    <string name="pref_transport_title">Tor TransProxy Port</string>
    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on (default: 9040 or 0 to disable)</string>
    <string name="pref_transport_dialog">TransProxy Port Config</string>
    <string name="pref_dnsport_title">Tor DNS Port</string>
    <string name="pref_dnsport_summary">Port that Tor offers its DNS on (default: 9053 or 0 to disable)</string>
    <string name="pref_dnsport_dialog">DNS Port Config</string>
    <string name="pref_torrc_title">Torrc Custom Config</string>
    <string name="pref_torrc_summary">EXPERTS ONLY: enter direct torrc config lines</string>
    <string name="pref_torrc_dialog">Custom Torrc</string>
    <string name="kibibyte">KiB</string>
    <string name="mebibyte">MiB</string>
    <string name="bridges_updated">Bridges Updated</string>
    <string name="restart_orbot_to_use_this_bridge_">Please restart Orbot to enable the changes</string>
    <string name="if_your_mobile_network_actively_blocks_tor_you_can_use_a_tor_bridge_to_access_the_network_another_way_to_get_bridges_is_to_send_an_email_to_bridges_torproject_org_please_note_that_you_must_send_the_email_using_an_address_from_one_of_the_following_email_providers_riseup_gmail_or_yahoo_">If your mobile network actively blocks Tor, you can use a \'Bridge Server\' as an alternate way in. Select one of the options to configure and test…</string>
    <string name="get_bridges_email">Email</string>
    <string name="get_bridges_email_request">Request Bridges via Email</string>
    <string name="apps_mode">VPN Mode</string>
    <string name="send_email">Send Email</string>
    <string name="vpn_default_world">Global (Auto)</string>
    <string name="hidden_services">Onion Services</string>
    <string name="v3_hosted_services">Hosted Onion Services</string>
    <string name="v3_client_auth_activity_title">Client Authorization</string>
    <string name="v3_key_hash">x25519 Private Key in Base32</string>
    <string name="v3_onion">.onion Domain</string>
    <string name="connect">Connect</string>
    <string name="mesh">Mesh</string>
</resources>