<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_connect">

    <fragment
        android:id="@+id/navigation_connect"
        android:name="org.torproject.android.ui.ConnectFragment"
        android:label="@string/connect"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/navigation_mesh"
        android:name="org.torproject.android.ui.MeshFragment"
        android:label="@string/mesh"
        tools:layout="@layout/fragment_mesh" />

    <fragment
        android:id="@+id/navigation_bridges"
        android:name="org.torproject.android.ui.BridgesFragment"
        android:label="@string/bridges"
        tools:layout="@layout/fragment_bridges" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="org.torproject.android.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />

</navigation> 